<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
       android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
           style="@style/label"
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            style="@style/edit"
            android:id="@+id/company"
            android:layout_width="300dip"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            style="@style/label"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_client_info_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/clientTemplateSelector"
            android:layout_width="300dip"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
       android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            style="@style/label"
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_form_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/templateSelector"
            android:layout_width="300dip"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
       android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            style="@style/label"
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/template_url_label"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            style="@style/edit"
            android:id="@+id/templateUrl"
            android:layout_width="300dip"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            style="@style/button"
            android:id="@+id/saveConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_config" />

        <Button
            style="@style/button"
            android:id="@+id/cancelConfig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>