<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
 
 <LinearLayout
     android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:layout_marginTop="15dip"
    android:gravity="center_horizontal"
    android:orientation="horizontal">
    <TextView
    style="@style/label"
    android:id="@+id/downloadTemplateStatus"
    android:layout_width="300dip"
    android:layout_height="wrap_content"
    android:textAppearance="?android:attr/textAppearanceMedium" />   
    </LinearLayout>   
    
    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:layout_marginTop="15dip"
    android:gravity="center_horizontal"
    android:orientation="horizontal">
    <TextView
    style="@style/label"
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/template_label"
    android:textAppearance="?android:attr/textAppearanceMedium" />   
<Spinner
    android:id="@+id/templateSelector"
    android:layout_width="300dip"
    android:layout_height="wrap_content"
    android:spinnerMode="dropdown" />
</LinearLayout>


<LinearLayout
     android:id="@+id/buttonLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
     android:layout_marginTop="15dip"
    android:gravity="center_horizontal"
    android:orientation="horizontal">
<Button
        style="@style/button"
    android:id="@+id/downloadTemplate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/download_template" />

<Button
    style="@style/button"
    android:id="@+id/cancelTemplate"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/cancel" />
</LinearLayout>

</LinearLayout>
